# DobbyRDKPlugins

./: CMakeLists.txt  README.md  schema.json
SuperAwesomePlugin/: CMakeLists.txt
SuperAwesomePlugin/source/: SuperAwesomePlugin.cpp  SuperAwesomePlugin.h
